2002-05-09  John Levon  <moz@compsoc.man.ac.uk>

	* doc/xhtml-chunk.xsl:
	* doc/xhtml-common.xsl:
	* doc/xhtml.xsl:
	* doc/Makefile.in: some small improvements
 
	* doc/src/doc/Doyxfile: add FIXME

	* gui/oprof_start.cpp:
	* libop/op_events_desc.h:
	* libop/op_events_desc.c:
	* libutil/filename_match.h: 
	* oprof_report/oprofpp_view.h: 
	* pp/op_time.cpp: 
	* pp/opp_symbol.h:
	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp:
	* pp/samples_container.cpp: 
	* pp/samples_container.h: more doxygen etc. fixes
 
2002-05-08  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* pp/op_symbol.cpp: better column handling with oprofpp -L

2002-05-08  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/Makefile.in:
	* gui/Makefile.in:
	* pp/Makefile.in:
	* utils/Makefile.in: fix make uninstall

2002-05-08  Philippe Elie  <phil.el@wanadoo.fr>
	
	* pp/opf_filter.cpp: move to ...
	* pp/op_to_source.cpp:
	* pp/opf_container.cpp: move to ..
	* pp/samples_container.cpp:
	* pp/opf_filter.h: move to ...
	* pp/samples_container.h:
	* pp/Makefile.in:
	* pp/.cvsignore: update

	* oprof_report/hotspotview.cpp:
	* oprof_report/hotspotview.h:
	* oprof_report/op_view.h:
	* oprof_report/oprof_report.cpp:
	* oprof_report/oprof_report.h:
	* oprof_report/oprof_view.cpp:
	* oprof_report/oprof_view.h:
	* pp/op_time.cpp:
	* pp/opf_container.cpp:
	* pp/opf_filter.cpp:
	* pp/opf_filter.h:
	* pp/opp_symbol.cpp:
	* pp/opp_symbol.h:
	* pp/oprofpp.cpp:
	* pp/oprofpp.h: samples_files_t -> samples_container_t

	* ui/.cvsignore: update

	* pp/opf_filter.cpp: move filename_match ...
	* libutil++/filename_match.cpp: here
	* libutil++/filename_match.cpp:
	* libutil++/Makefile.in:

	* pp/Makefile.in: fix typo that prevent op_to_source
	  to be recompiled

2002-05-08  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* doc/Makefile.in: make clean delete *.html
 
	* libdb/db-debug.c: pedantry
 
	* libutil/op_fileio.h:
	* libutil/op_fileio.c:
	* pp/oprofpp.cpp: remove unused code and change
	  function names
 